--- a/assets/t2/assets/styles/styles.css
+++ b/assets/t2/assets/styles/styles.css
@@ -5,26 +5,27 @@
 }
 
 h1 {
-    display: block;
     text-align: center;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100wh;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+    width: 100vw;
     height: 100vh;
+    padding: 20px;
 }
 
 .content {
-    width: 500px;
-}
-
-.description {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .house-image {
-    display: inline;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
